[package]
name = "Rust-Sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-executor = { version="0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
panic-probe = { version = "0.3" }
embassy-time = { version="0.4.0" } 
embassy-rp = { version="0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-sync = { version="0.4.0", features = ["defmt"] }
defmt-rtt = "1.0.0"
defmt = "1.0.1"
fixed = "1.29.0"
fixed-macro = "1.2"
static_cell = "2.1"

# Taken from the Embassy build information
[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
